gcode/org2what-antlr/OrgModeParser.java
// $ANTLR 3.2 debian-7 OrgMode.g 2012-12-20 20:58:48

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
import org.antlr.stringtemplate.*;
import org.antlr.stringtemplate.language.*;
import java.util.HashMap;
public class OrgModeParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "BEGIN_EXAMPLE", "END_EXAMPLE", "BEGIN_SRC", "END_SRC", "STAR", "PLUS", "MINUS", "EQ", "NL", "DOUBLE_NL", "WORD", "WS", "BOLD_INLINE", "UNDERLINED_INLINE", "CODE_INLINE", "VERBATIM_INLINE", "STRIKE_INLINE", "ITALIC_INLINE", "LINK_URL", "LINK_URL_DESC"
    };
    public static final int STAR=8;
    public static final int BEGIN_EXAMPLE=4;
    public static final int DOUBLE_NL=13;
    public static final int LINK_URL=22;
    public static final int STRIKE_INLINE=20;
    public static final int MINUS=10;
    public static final int CODE_INLINE=18;
    public static final int EOF=-1;
    public static final int BOLD_INLINE=16;
    public static final int WORD=14;
    public static final int VERBATIM_INLINE=19;
    public static final int WS=15;
    public static final int UNDERLINED_INLINE=17;
    public static final int END_EXAMPLE=5;
    public static final int END_SRC=7;
    public static final int PLUS=9;
    public static final int LINK_URL_DESC=23;
    public static final int ITALIC_INLINE=21;
    public static final int NL=12;
    public static final int EQ=11;
    public static final int BEGIN_SRC=6;

    // delegates
    // delegators


        public OrgModeParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public OrgModeParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[22+1];
             
             
        }
        
    protected StringTemplateGroup templateLib =
      new StringTemplateGroup("OrgModeParserTemplates", AngleBracketTemplateLexer.class);

    public void setTemplateLib(StringTemplateGroup templateLib) {
      this.templateLib = templateLib;
    }
    public StringTemplateGroup getTemplateLib() {
      return templateLib;
    }
    /** allows convenient multi-value initialization:
     *  "new STAttrMap().put(...).put(...)"
     */
    public static class STAttrMap extends HashMap {
      public STAttrMap put(String attrName, Object value) {
        super.put(attrName, value);
        return this;
      }
      public STAttrMap put(String attrName, int value) {
        super.put(attrName, new Integer(value));
        return this;
      }
    }

    public String[] getTokenNames() { return OrgModeParser.tokenNames; }
    public String getGrammarFileName() { return "OrgMode.g"; }


        public boolean notNewlineP() {
            if (input.LT(1) == null) {
                return true;
            }

            int type = input.LT(1).getType();
            System.out.println("NL? " + input.LT(1));
            return ! (type == NL || type == DOUBLE_NL);
        }
        public boolean noSpace() {
            if (input.LT(1) == null) {
                return true;
            }
            boolean result = input.LT(1).getCharPositionInLine() == input.LT(-1).getCharPositionInLine() + input.LT(-1).getText().length();
            System.out.println("noSpace? " + input.LT(1) + " " + input.LT(-1) + ": " + result);
            return result;
        }


    public static class orgFile_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "orgFile"
    // OrgMode.g:59:1: orgFile : ( block )* ;
    public final OrgModeParser.orgFile_return orgFile() throws RecognitionException {
        OrgModeParser.orgFile_return retval = new OrgModeParser.orgFile_return();
        retval.start = input.LT(1);
        int orgFile_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // OrgMode.g:59:9: ( ( block )* )
            // OrgMode.g:59:11: ( block )*
            {
            // OrgMode.g:59:11: ( block )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=BEGIN_EXAMPLE && LA1_0<=LINK_URL_DESC)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // OrgMode.g:0:0: block
            	    {
            	    pushFollow(FOLLOW_block_in_orgFile202);
            	    block();

            	    state._fsp--;
            	    if (state.failed) return retval;

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 1, orgFile_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "orgFile"

    public static class block_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "block"
    // OrgMode.g:61:1: block : ( header | exampleParagraph | codeParagraph | normalParagraph | NL | DOUBLE_NL );
    public final OrgModeParser.block_return block() throws RecognitionException {
        OrgModeParser.block_return retval = new OrgModeParser.block_return();
        retval.start = input.LT(1);
        int block_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // OrgMode.g:61:7: ( header | exampleParagraph | codeParagraph | normalParagraph | NL | DOUBLE_NL )
            int alt2=6;
            alt2 = dfa2.predict(input);
            switch (alt2) {
                case 1 :
                    // OrgMode.g:62:9: header
                    {
                    pushFollow(FOLLOW_header_in_block220);
                    header();

                    state._fsp--;
                    if (state.failed) return retval;

                    }
                    break;
                case 2 :
                    // OrgMode.g:63:9: exampleParagraph
                    {
                    pushFollow(FOLLOW_exampleParagraph_in_block230);
                    exampleParagraph();

                    state._fsp--;
                    if (state.failed) return retval;

                    }
                    break;
                case 3 :
                    // OrgMode.g:64:9: codeParagraph
                    {
                    pushFollow(FOLLOW_codeParagraph_in_block240);
                    codeParagraph();

                    state._fsp--;
                    if (state.failed) return retval;

                    }
                    break;
                case 4 :
                    // OrgMode.g:65:9: normalParagraph
                    {
                    pushFollow(FOLLOW_normalParagraph_in_block250);
                    normalParagraph();

                    state._fsp--;
                    if (state.failed) return retval;

                    }
                    break;
                case 5 :
                    // OrgMode.g:66:9: NL
                    {
                    match(input,NL,FOLLOW_NL_in_block260); if (state.failed) return retval;

                    }
                    break;
                case 6 :
                    // OrgMode.g:67:9: DOUBLE_NL
                    {
                    match(input,DOUBLE_NL,FOLLOW_DOUBLE_NL_in_block270); if (state.failed) return retval;

                    }
                    break;

            }
            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 2, block_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "block"

    public static class header_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "header"
    // OrgMode.g:70:1: header : {...}? ( STAR )+ ( notNL )+ ( NL | DOUBLE_NL ) ;
    public final OrgModeParser.header_return header() throws RecognitionException {
        OrgModeParser.header_return retval = new OrgModeParser.header_return();
        retval.start = input.LT(1);
        int header_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
            // OrgMode.g:70:8: ({...}? ( STAR )+ ( notNL )+ ( NL | DOUBLE_NL ) )
            // OrgMode.g:70:10: {...}? ( STAR )+ ( notNL )+ ( NL | DOUBLE_NL )
            {
            if ( !((input.LT(1).getCharPositionInLine() == 0)) ) {
                if (state.backtracking>0) {state.failed=true; return retval;}
                throw new FailedPredicateException(input, "header", "input.LT(1).getCharPositionInLine() == 0");
            }
            // OrgMode.g:70:54: ( STAR )+
            int cnt3=0;
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==STAR) ) {
                    int LA3_1 = input.LA(2);

                    if ( (synpred7_OrgMode()) ) {
                        alt3=1;
                    }


                }


                switch (alt3) {
            	case 1 :
            	    // OrgMode.g:0:0: STAR
            	    {
            	    match(input,STAR,FOLLOW_STAR_in_header285); if (state.failed) return retval;

            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);

            // OrgMode.g:70:60: ( notNL )+
            int cnt4=0;
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( ((LA4_0>=BEGIN_EXAMPLE && LA4_0<=EQ)||(LA4_0>=WORD && LA4_0<=LINK_URL_DESC)) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // OrgMode.g:0:0: notNL
            	    {
            	    pushFollow(FOLLOW_notNL_in_header288);
            	    notNL();

            	    state._fsp--;
            	    if (state.failed) return retval;

            	    }
            	    break;

            	default :
            	    if ( cnt4 >= 1 ) break loop4;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(4, input);
                        throw eee;
                }
                cnt4++;
            } while (true);

            if ( (input.LA(1)>=NL && input.LA(1)<=DOUBLE_NL) ) {
                input.consume();
                state.errorRecovery=false;state.failed=false;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }

            if ( state.backtracking==0 ) {
              System.out.println("got a header " + input.toString(retval.start,input.LT(-1)));
            }

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 3, header_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "header"

    public static class exampleParagraph_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "exampleParagraph"
    // OrgMode.g:72:1: exampleParagraph : BEGIN_EXAMPLE normalParagraph END_EXAMPLE ;
    public final OrgModeParser.exampleParagraph_return exampleParagraph() throws RecognitionException {
        OrgModeParser.exampleParagraph_return retval = new OrgModeParser.exampleParagraph_return();
        retval.start = input.LT(1);
        int exampleParagraph_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return retval; }
            // OrgMode.g:72:18: ( BEGIN_EXAMPLE normalParagraph END_EXAMPLE )
            // OrgMode.g:72:20: BEGIN_EXAMPLE normalParagraph END_EXAMPLE
            {
            match(input,BEGIN_EXAMPLE,FOLLOW_BEGIN_EXAMPLE_in_exampleParagraph305); if (state.failed) return retval;
            pushFollow(FOLLOW_normalParagraph_in_exampleParagraph307);
            normalParagraph();

            state._fsp--;
            if (state.failed) return retval;
            match(input,END_EXAMPLE,FOLLOW_END_EXAMPLE_in_exampleParagraph309); if (state.failed) return retval;

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 4, exampleParagraph_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "exampleParagraph"

    public static class codeParagraph_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "codeParagraph"
    // OrgMode.g:74:1: codeParagraph : BEGIN_SRC WORD normalParagraph END_SRC ;
    public final OrgModeParser.codeParagraph_return codeParagraph() throws RecognitionException {
        OrgModeParser.codeParagraph_return retval = new OrgModeParser.codeParagraph_return();
        retval.start = input.LT(1);
        int codeParagraph_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return retval; }
            // OrgMode.g:74:15: ( BEGIN_SRC WORD normalParagraph END_SRC )
            // OrgMode.g:74:17: BEGIN_SRC WORD normalParagraph END_SRC
            {
            match(input,BEGIN_SRC,FOLLOW_BEGIN_SRC_in_codeParagraph318); if (state.failed) return retval;
            match(input,WORD,FOLLOW_WORD_in_codeParagraph320); if (state.failed) return retval;
            pushFollow(FOLLOW_normalParagraph_in_codeParagraph322);
            normalParagraph();

            state._fsp--;
            if (state.failed) return retval;
            match(input,END_SRC,FOLLOW_END_SRC_in_codeParagraph324); if (state.failed) return retval;

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 5, codeParagraph_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "codeParagraph"

    public static class normalParagraph_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "normalParagraph"
    // OrgMode.g:77:1: normalParagraph : ( lineText NL )+ ;
    public final OrgModeParser.normalParagraph_return normalParagraph() throws RecognitionException {
        OrgModeParser.normalParagraph_return retval = new OrgModeParser.normalParagraph_return();
        retval.start = input.LT(1);
        int normalParagraph_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 6) ) { return retval; }
            // OrgMode.g:77:17: ( ( lineText NL )+ )
            // OrgMode.g:77:19: ( lineText NL )+
            {
            // OrgMode.g:77:19: ( lineText NL )+
            int cnt5=0;
            loop5:
            do {
                int alt5=2;
                switch ( input.LA(1) ) {
                case STAR:
                    {
                    int LA5_2 = input.LA(2);

                    if ( (synpred10_OrgMode()) ) {
                        alt5=1;
                    }


                    }
                    break;
                case BEGIN_EXAMPLE:
                    {
                    int LA5_3 = input.LA(2);

                    if ( (synpred10_OrgMode()) ) {
                        alt5=1;
                    }


                    }
                    break;
                case BEGIN_SRC:
                    {
                    int LA5_4 = input.LA(2);

                    if ( (synpred10_OrgMode()) ) {
                        alt5=1;
                    }


                    }
                    break;
                case END_EXAMPLE:
                    {
                    int LA5_5 = input.LA(2);

                    if ( (synpred10_OrgMode()) ) {
                        alt5=1;
                    }


                    }
                    break;
                case END_SRC:
                    {
                    int LA5_6 = input.LA(2);

                    if ( (synpred10_OrgMode()) ) {
                        alt5=1;
                    }


                    }
                    break;
                case PLUS:
                case MINUS:
                case EQ:
                case WORD:
                case WS:
                case BOLD_INLINE:
                case UNDERLINED_INLINE:
                case CODE_INLINE:
                case VERBATIM_INLINE:
                case STRIKE_INLINE:
                case ITALIC_INLINE:
                case LINK_URL:
                case LINK_URL_DESC:
                    {
                    int LA5_7 = input.LA(2);

                    if ( (synpred10_OrgMode()) ) {
                        alt5=1;
                    }


                    }
                    break;

                }

                switch (alt5) {
            	case 1 :
            	    // OrgMode.g:77:20: lineText NL
            	    {
            	    pushFollow(FOLLOW_lineText_in_normalParagraph335);
            	    lineText();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    match(input,NL,FOLLOW_NL_in_normalParagraph337); if (state.failed) return retval;

            	    }
            	    break;

            	default :
            	    if ( cnt5 >= 1 ) break loop5;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(5, input);
                        throw eee;
                }
                cnt5++;
            } while (true);


            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 6, normalParagraph_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "normalParagraph"

    public static class lineText_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "lineText"
    // OrgMode.g:79:1: lineText : ( textItem )+ ;
    public final OrgModeParser.lineText_return lineText() throws RecognitionException {
        OrgModeParser.lineText_return retval = new OrgModeParser.lineText_return();
        retval.start = input.LT(1);
        int lineText_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 7) ) { return retval; }
            // OrgMode.g:79:10: ( ( textItem )+ )
            // OrgMode.g:79:12: ( textItem )+
            {
            // OrgMode.g:79:12: ( textItem )+
            int cnt6=0;
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( ((LA6_0>=BEGIN_EXAMPLE && LA6_0<=EQ)||(LA6_0>=WORD && LA6_0<=LINK_URL_DESC)) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // OrgMode.g:0:0: textItem
            	    {
            	    pushFollow(FOLLOW_textItem_in_lineText348);
            	    textItem();

            	    state._fsp--;
            	    if (state.failed) return retval;

            	    }
            	    break;

            	default :
            	    if ( cnt6 >= 1 ) break loop6;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(6, input);
                        throw eee;
                }
                cnt6++;
            } while (true);


            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 7, lineText_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "lineText"

    public static class textItem_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "textItem"
    // OrgMode.g:81:1: textItem : normalText ;
    public final OrgModeParser.textItem_return textItem() throws RecognitionException {
        OrgModeParser.textItem_return retval = new OrgModeParser.textItem_return();
        retval.start = input.LT(1);
        int textItem_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 8) ) { return retval; }
            // OrgMode.g:81:10: ( normalText )
            // OrgMode.g:81:12: normalText
            {
            pushFollow(FOLLOW_normalText_in_textItem357);
            normalText();

            state._fsp--;
            if (state.failed) return retval;

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 8, textItem_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "textItem"

    public static class notNL_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "notNL"
    // OrgMode.g:84:1: notNL : ~ ( NL | DOUBLE_NL ) ;
    public final OrgModeParser.notNL_return notNL() throws RecognitionException {
        OrgModeParser.notNL_return retval = new OrgModeParser.notNL_return();
        retval.start = input.LT(1);
        int notNL_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 9) ) { return retval; }
            // OrgMode.g:84:7: (~ ( NL | DOUBLE_NL ) )
            // OrgMode.g:84:9: ~ ( NL | DOUBLE_NL )
            {
            if ( (input.LA(1)>=BEGIN_EXAMPLE && input.LA(1)<=EQ)||(input.LA(1)>=WORD && input.LA(1)<=LINK_URL_DESC) ) {
                input.consume();
                state.errorRecovery=false;state.failed=false;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 9, notNL_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "notNL"

    public static class normalText_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "normalText"
    // OrgMode.g:86:1: normalText : notNL ;
    public final OrgModeParser.normalText_return normalText() throws RecognitionException {
        OrgModeParser.normalText_return retval = new OrgModeParser.normalText_return();
        retval.start = input.LT(1);
        int normalText_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 10) ) { return retval; }
            // OrgMode.g:86:12: ( notNL )
            // OrgMode.g:86:14: notNL
            {
            pushFollow(FOLLOW_notNL_in_normalText380);
            notNL();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) {
              System.out.println("matched normal text: " + input.toString(retval.start,input.LT(-1)));
            }

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 10, normalText_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "normalText"

    // $ANTLR start synpred2_OrgMode
    public final void synpred2_OrgMode_fragment() throws RecognitionException {   
        // OrgMode.g:62:9: ( header )
        // OrgMode.g:62:9: header
        {
        pushFollow(FOLLOW_header_in_synpred2_OrgMode220);
        header();

        state._fsp--;
        if (state.failed) return ;

        }
    }
    // $ANTLR end synpred2_OrgMode

    // $ANTLR start synpred3_OrgMode
    public final void synpred3_OrgMode_fragment() throws RecognitionException {   
        // OrgMode.g:63:9: ( exampleParagraph )
        // OrgMode.g:63:9: exampleParagraph
        {
        pushFollow(FOLLOW_exampleParagraph_in_synpred3_OrgMode230);
        exampleParagraph();

        state._fsp--;
        if (state.failed) return ;

        }
    }
    // $ANTLR end synpred3_OrgMode

    // $ANTLR start synpred4_OrgMode
    public final void synpred4_OrgMode_fragment() throws RecognitionException {   
        // OrgMode.g:64:9: ( codeParagraph )
        // OrgMode.g:64:9: codeParagraph
        {
        pushFollow(FOLLOW_codeParagraph_in_synpred4_OrgMode240);
        codeParagraph();

        state._fsp--;
        if (state.failed) return ;

        }
    }
    // $ANTLR end synpred4_OrgMode

    // $ANTLR start synpred5_OrgMode
    public final void synpred5_OrgMode_fragment() throws RecognitionException {   
        // OrgMode.g:65:9: ( normalParagraph )
        // OrgMode.g:65:9: normalParagraph
        {
        pushFollow(FOLLOW_normalParagraph_in_synpred5_OrgMode250);
        normalParagraph();

        state._fsp--;
        if (state.failed) return ;

        }
    }
    // $ANTLR end synpred5_OrgMode

    // $ANTLR start synpred7_OrgMode
    public final void synpred7_OrgMode_fragment() throws RecognitionException {   
        // OrgMode.g:70:54: ( STAR )
        // OrgMode.g:70:54: STAR
        {
        match(input,STAR,FOLLOW_STAR_in_synpred7_OrgMode285); if (state.failed) return ;

        }
    }
    // $ANTLR end synpred7_OrgMode

    // $ANTLR start synpred10_OrgMode
    public final void synpred10_OrgMode_fragment() throws RecognitionException {   
        // OrgMode.g:77:20: ( lineText NL )
        // OrgMode.g:77:20: lineText NL
        {
        pushFollow(FOLLOW_lineText_in_synpred10_OrgMode335);
        lineText();

        state._fsp--;
        if (state.failed) return ;
        match(input,NL,FOLLOW_NL_in_synpred10_OrgMode337); if (state.failed) return ;

        }
    }
    // $ANTLR end synpred10_OrgMode

    // Delegated rules
